<resources>
    <string name="app_name">DocNyle</string>
    <string name="login">Login</string>
    <string name="username">EMAIL / MOBILE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="patient_category">Patient Category</string>
    <string name="op_no_1234">OP NO:1234</string>
    <string name="op_visit_type">OP Visit Type</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="visit_date">Visit Date</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="alternate_no">Alternate No.</string>
    <string name="consulting_physician">Consulting Physician</string>
    <string name="referring_physician">Referring Physician</string>
    <string name="consultaion_fee">Consultaion Fee</string>
    <string name="validity_till">Validity Till</string>
    <string name="description">Description</string>
    <string name="health_illness">Health Illness</string>
    <string name="since">Since</string>
    <string name="medication">Medication</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="contin">Continue</string>
    <string name="drug_name">Drug Name</string>
    <string name="dosage">Dosage</string>
    <string name="no_of_days">No. of days</string>
    <string name="next_review_date">Next Review Date</string>
    <string name="cost">Cost</string>
    <string name="total_treatment_cost">Total Treatment Cost</string>
    <string name="inr_5000">INR 5000</string>
    <string name="select_category">Select Category</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search_treatment">Search Treatment</string>
    <string name="search">Search</string>
    <string name="consultant_dentist">Consultant Dentist</string>
    <string name="select">Select</string>
    <string name="get_data">Get Data</string>
    <string name="select_date">Select Date</string>
    <string name="closing_date">Closing Date</string>
    <string name="opening_date">Opening Date</string>

    <string-array name="stepLabels">
        <item>Approval</item>
        <item>Processed</item>
        <item>Shipped</item>
        <item>Delivery</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="op_registration">OP Registration</string>
    <string name="chief_complaints">Chief Complaints</string>
    <string name="diagnostic_aids_investigations">Diagnostic Aids / Investigations</string>
    <string name="treatment_plans_medications">Treatment Plans / Medications</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="medical_history">Medical History</string>
    <string name="surgical_procedure_intervention">Surgical Procedure / Intervention</string>
    <string name="update">update</string>
    <string name="registration_fee">Registration Fee</string>
    <string name="inr_1000">INR 1000</string>
    <string name="validity_days">Validity Days</string>
    <string name="_5">5</string>
    <string name="periodical_daily_register">Periodical Daily Register</string>
    <string name="patient_history">Patient History</string>
    <string name="peridical_treatment_register">Periodical Treatment Register</string>
    <string name="periodical_treatment_summary">Periodical Treatment Summary</string>
    <string name="all">All</string>
    <string name="visit_category">Visit Category</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="patient_name">Patient Name</string>
    <string name="enter_search_treatment">Enter Search Treatment</string>
    <string name="enter_op_no">Enter OP No.</string>
    <string name="upload">Upload</string>
    <string name="upload_document_provision">Upload Document Provision</string>
</resources>
