<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Toolbar-->
        <include layout="@layout/toolbar" />
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opening_date"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:textSize="16sp" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/select_date"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/drop_down_arrow"
                    android:background="@drawable/rectangle"
                    android:textSize="16sp"
                    android:drawableEnd="@drawable/drop_down_arrow" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/closing_date"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:textSize="16sp" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/select_date"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/drop_down_arrow"
                    android:background="@drawable/rectangle"
                    android:textSize="16sp"
                    android:drawableEnd="@drawable/drop_down_arrow" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/consultant_dentist"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textSize="16sp" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/select"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/drop_down_arrow"
                    android:background="@drawable/rectangle"
                    android:textSize="16sp"
                    android:drawableEnd="@drawable/drop_down_arrow" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_treatment"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:textSize="16sp" />
                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="10dp"
                    android:hint="@string/search"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle"
                    android:textSize="16sp"
                    android:paddingLeft="10dp" />
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appCompatButtonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/round_login_user_password"
                    android:textColor="@color/white"
                    android:text="@string/get_data" />
            </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>