<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/opvisittype"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/op_visit_type"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/drop_down_arrow"
                    android:background="@drawable/textview_background"
                    android:textSize="16sp"
                    android:drawableEnd="@drawable/drop_down_arrow" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/opno"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/op_no_1234"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/textview_background"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/patientcategory"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/patient_category"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:drawableRight="@drawable/drop_down_arrow"
                    android:background="@drawable/textview_background"
                    android:textSize="16sp"
                    android:drawableEnd="@drawable/drop_down_arrow" />



                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textInputEditTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/name"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:gravity="center"
                        android:background="@drawable/textview_background"
                        android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/agegender"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/age_gender"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/textview_background"
                    android:textSize="16sp" />
                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/visitdate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/visit_date"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/textview_background"
                    android:textSize="16sp" />


                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:hint="@string/address"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/textview_background"
                        android:textSize="16sp" />


                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:hint="@string/city"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/textview_background"
                        android:textSize="16sp" />



                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:hint="@string/mobile_no"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/textview_background"
                        android:textSize="16sp" />





                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:hint="@string/alternate_no"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/textview_background"
                        android:textSize="16sp" />


                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/patient_category"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/textview_background"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/consulting_physician"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/textview_background"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/referring_physician"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/textview_background"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/consultaion_fee"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/textview_background"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/validity_till"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/textview_background"
                    android:textSize="16sp" />



                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:hint="@string/description"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/textview_background"
                        android:textSize="16sp" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/round_login_user_password"
                android:textColor="@color/white"
                android:text="Submit" />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_continue"
                android:textColor="@color/white"
                android:text="Continue" />

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_cancel"
                android:textColor="@color/white"
                android:text="Cancel" />
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
