<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_login_user_password"
                android:layout_margin="20dp"
                android:padding="20dp"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/health_illness"
                    android:textColorHint="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/medical_history_textview"
                    android:textSize="12sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp" />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/since"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/medical_history_textview"
                    android:textSize="12sp"
                     />

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:hint="@string/medication"
                    android:textColorHint="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/medical_history_textview"
                    android:textSize="12sp" />
                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/textview_background"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/add" />
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>