<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/healthillness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/health_illness"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/since"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/since"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/medication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medication"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/deleterecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:drawableRight="@drawable/delete"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            android:textSize="12sp"
            android:drawableEnd="@drawable/delete" />
    </android.support.v7.widget.LinearLayoutCompat>

</LinearLayout>